# nanovg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  premake4.lua
.cursor/: nanovg.lnk
.cursor/skills/no-third-party-header-edits/: SKILL.md
.cursor/skills/verify/: SKILL.md
.github/workflows/: main.yml
example/: demo.c  demo.cpp  demo.h  demo.hpp  example_fbo.cpp  example_gl2.cpp  example_gl3.cpp  example_gles2.cpp  example_gles3.cpp  nvg_input.hpp  nvg_window.hpp  nvg_window_glfw.cpp  nvg_window_sdl3.cpp  perf.cpp  perf.h  perf.hpp
example/legacy/: demo.c  demo.h  example_fbo.c  example_gl2.c  example_gl3.c  example_gles2.c  example_gles3.c  perf.c  perf.h
obsolete/: nanovg_gl2.h  nanovg_gl3.h
src/: fontstash.h  nanovg.c  nanovg.cpp  nanovg.hpp  nanovg_gl.h  nanovg_gl.hpp  nanovg_gl_utils.hpp
src/nvg/: nanovg.cpp  nanovg.hpp  nanovg_adapter.cpp  nanovg_context.cpp  nanovg_context.hpp  nanovg_detail.cpp  nanovg_detail.hpp  nanovg_gl.hpp  nanovg_gl2.hpp  nanovg_gl3.hpp  nanovg_gl_utils.hpp  nanovg_legacy.cpp
src/nvg/legacy/: nanovg.h  nanovg_gl.h  nanovg_gl_utils.h
