cmake_minimum_required(VERSION 3.15)

project(nanovg LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_C_STANDARD 11)

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGL_GLEXT_PROTOTYPES=1 -O3 -Wall -Wreturn-type -Wno-reorder -Wno-implicit-fallthrough -Wno-unused-variable -Wno-unused-parameter -Wno-unused-function -Wno-deprecated -fmessage-length=0")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DGL_GLEXT_PROTOTYPES=1 -O3 -Wall -Wno-unused-function -Wno-unused-variable -Wno-unused-parameter -Wno-deprecated")
endif()

if(WIN32)
  # Disable annoying MSVC warnings (all targets)
  add_definitions(/D "_CRT_SECURE_NO_WARNINGS")
  add_definitions(/D "NOMINMAX")
  add_definitions(/D "NDEBUG")
  add_definitions(/D "_CONSOLE")
  add_definitions(/D "GLEW_STATIC")
  add_definitions(/D "UNICODE")
  add_definitions(/D "_UNICODE")

  # Parallel build on MSVC (all targets)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /Oi /Gy /Ob2 /W3 /openmp")

endif()

set(SRC_DIR "./src")
file(GLOB SRCS ${SRC_DIR}/*.cpp)
file(GLOB HDRS ${SRC_DIR}/*.h ${SRC_DIR}/*.hpp)

install(FILES ${HDRS} DESTINATION include/${PROJECT_NAME}/)

add_library(${PROJECT_NAME} ${SRCS})
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)

find_package(glfw3 CONFIG QUIET)
if(NOT glfw3_FOUND)
	find_package(glfw3 QUIET)
endif()
if(NOT glfw3_FOUND)
	find_package(GLFW3 QUIET)
endif()
if(NOT glfw3_FOUND)
	message(FATAL_ERROR "Could not find GLFW with find_package(). Set CMAKE_PREFIX_PATH or glfw3_DIR to your GLFW install.")
endif()
find_package(GLEW REQUIRED)

if(TARGET glfw)
	set(GLFW_TARGET glfw)
elseif(TARGET glfw::glfw)
	set(GLFW_TARGET glfw::glfw)
elseif(TARGET glfw3::glfw3)
	set(GLFW_TARGET glfw3::glfw3)
else()
	message(FATAL_ERROR "No GLFW imported target found after find_package(glfw3).")
endif()

if(TARGET GLEW::glew_s)
	set(GLEW_TARGET GLEW::glew_s)
	set(GLEW_IS_STATIC TRUE)
elseif(TARGET GLEW::GLEW)
	set(GLEW_TARGET GLEW::GLEW)
	set(GLEW_IS_STATIC FALSE)
elseif(TARGET GLEW::glew)
	set(GLEW_TARGET GLEW::glew)
	set(GLEW_IS_STATIC FALSE)
else()
	message(FATAL_ERROR "No GLEW imported target found after find_package(GLEW).")
endif()

set(DEFS "")
if(APPLE)
        find_library(cocoa_library Cocoa)
        find_library(opengl_library OpenGL)
        find_library(corevideo_library CoreVideo)
        find_library(iokit_library IOKit)
        set(LIBS  ${GLFW_TARGET} ${GLEW_TARGET} ${cocoa_library} ${opengl_library} ${corevideo_library} ${iokit_library})
elseif(WIN32)
        set(WIN_SYS_LIBS gdi32 winmm user32 glu32 opengl32 kernel32)
        set(LIBS ${GLFW_TARGET} ${GLEW_TARGET} ${WIN_SYS_LIBS})
        set(DEFS _CRT_SECURE_NO_WARNINGS NOMINMAX NDEBUG _CONSOLE UNICODE _UNICODE NANOVG_GLEW)
        if(GLEW_IS_STATIC)
                list(APPEND DEFS GLEW_STATIC)
        endif()
else()
        set(LIBS ${GLFW_TARGET} ${GLEW_TARGET} GLU GL Xext Xi Xrandr X11 Xxf86vm Xinerama Xcursor Xdamage dl z m)
endif()
set(COMMON_FILES "example/demo.cpp" "example/perf.cpp")

set(TARGETS ${PROJECT_NAME})
# OpenGL ES examples need GLES headers; typical Windows SDK + GLFW do not provide them.
if(WIN32)
	set(NANOVG_EXAMPLE_PROJECTS gl2 gl3 fbo)
else()
	set(NANOVG_EXAMPLE_PROJECTS gles2 gles3 gl2 gl3 fbo)
endif()
foreach(EXAMPLE_PROJ IN ITEMS ${NANOVG_EXAMPLE_PROJECTS})
        add_executable(example_${EXAMPLE_PROJ} "example/example_${EXAMPLE_PROJ}.cpp" ${COMMON_FILES})
        list(APPEND TARGETS example_${EXAMPLE_PROJ})
        target_compile_definitions(example_${EXAMPLE_PROJ} PUBLIC ${DEFS})
        target_link_libraries(example_${EXAMPLE_PROJ} ${PROJECT_NAME} ${LIBS})
        target_include_directories(example_${EXAMPLE_PROJ} PUBLIC ${SRC_DIR})
        target_compile_features(example_${EXAMPLE_PROJ} PRIVATE cxx_std_20)
endforeach()

install(TARGETS ${TARGETS}
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        RUNTIME DESTINATION bin
        INCLUDES DESTINATION include/${PROJECT_NAME}
)

