cmake_minimum_required(VERSION 3.15)

project(nanovg LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_C_STANDARD 11)

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DGL_GLEXT_PROTOTYPES=1 -O3 -Wall -Wreturn-type -Wno-reorder -Wno-implicit-fallthrough -Wno-unused-variable -Wno-unused-parameter -Wno-unused-function -Wno-deprecated -fmessage-length=0")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DGL_GLEXT_PROTOTYPES=1 -O3 -Wall -Wno-unused-function -Wno-unused-variable -Wno-unused-parameter -Wno-deprecated")
endif()

if(WIN32)
  # Disable annoying MSVC warnings (all targets)
  add_definitions(/D "_CRT_SECURE_NO_WARNINGS")
  add_definitions(/D "NOMINMAX")
  add_definitions(/D "NDEBUG")
  add_definitions(/D "_CONSOLE")
  add_definitions(/D "GLEW_STATIC")
  add_definitions(/D "UNICODE")
  add_definitions(/D "_UNICODE")

  # Parallel build on MSVC (all targets)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /Oi /Gy /Ob2 /W3 /openmp")

endif()

set(SRC_DIR "./src")
set(NVG_SRC_DIR "${SRC_DIR}/nvg")
set(NVG_LEGACY_DIR "${NVG_SRC_DIR}/legacy")
set(NVG_THIRD_PARTY_DIR "${SRC_DIR}/thirdParty")
file(GLOB SRCS ${NVG_SRC_DIR}/*.cpp)
file(GLOB HDRS ${NVG_SRC_DIR}/*.h ${NVG_SRC_DIR}/*.hpp ${NVG_THIRD_PARTY_DIR}/*.h ${NVG_THIRD_PARTY_DIR}/*.hpp)
list(APPEND HDRS
	"${NVG_LEGACY_DIR}/nanovg.h"
	"${NVG_LEGACY_DIR}/nanovg_gl.h"
	"${NVG_LEGACY_DIR}/nanovg_gl_utils.h"
)

install(FILES ${HDRS} DESTINATION include/${PROJECT_NAME}/)

add_library(${PROJECT_NAME} ${SRCS})
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
target_include_directories(${PROJECT_NAME} PUBLIC ${SRC_DIR} ${NVG_LEGACY_DIR} ${NVG_SRC_DIR} ${NVG_THIRD_PARTY_DIR})
if(MSVC)
	target_compile_options(${PROJECT_NAME} PRIVATE /W4)
endif()

find_package(glfw3 CONFIG QUIET)
if(NOT glfw3_FOUND)
	find_package(glfw3 QUIET)
endif()
if(NOT glfw3_FOUND)
	find_package(GLFW3 QUIET)
endif()
if(NOT glfw3_FOUND)
	if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/external/glfw/CMakeLists.txt")
		set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
		set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
		set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
		set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
		add_subdirectory(external/glfw)
		set(glfw3_FOUND TRUE)
	else()
		message(FATAL_ERROR "Could not find GLFW with find_package(), and no local submodule found at external/glfw.")
	endif()
endif()

find_package(GLEW QUIET)
if(NOT GLEW_FOUND)
	if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/external/glew/include/GL/glew.h" AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/external/glew/src/glew.c")
		add_library(nanovg_glew STATIC external/glew/src/glew.c)
		target_include_directories(nanovg_glew PUBLIC external/glew/include)
		if(MSVC)
			target_compile_options(nanovg_glew PRIVATE /W4)
		endif()
		add_library(GLEW::glew_s ALIAS nanovg_glew)
		set(GLEW_FOUND TRUE)
	else()
		message(FATAL_ERROR "Could not find GLEW with find_package(), and no local submodule source found at external/glew.")
	endif()
endif()

if(TARGET glfw)
	set(GLFW_TARGET glfw)
elseif(TARGET glfw::glfw)
	set(GLFW_TARGET glfw::glfw)
elseif(TARGET glfw3::glfw3)
	set(GLFW_TARGET glfw3::glfw3)
else()
	message(FATAL_ERROR "No GLFW imported target found after find_package(glfw3).")
endif()

if(TARGET GLEW::glew_s)
	set(GLEW_TARGET GLEW::glew_s)
	set(GLEW_IS_STATIC TRUE)
elseif(TARGET GLEW::GLEW)
	set(GLEW_TARGET GLEW::GLEW)
	set(GLEW_IS_STATIC FALSE)
elseif(TARGET GLEW::glew)
	set(GLEW_TARGET GLEW::glew)
	set(GLEW_IS_STATIC FALSE)
else()
	message(FATAL_ERROR "No GLEW imported target found after find_package(GLEW).")
endif()

set(DEFS "")
if(APPLE)
        find_library(cocoa_library Cocoa)
        find_library(opengl_library OpenGL)
        find_library(corevideo_library CoreVideo)
        find_library(iokit_library IOKit)
        set(LIBS  ${GLFW_TARGET} ${GLEW_TARGET} ${cocoa_library} ${opengl_library} ${corevideo_library} ${iokit_library})
elseif(WIN32)
        set(WIN_SYS_LIBS gdi32 winmm user32 glu32 opengl32 kernel32)
        set(LIBS ${GLFW_TARGET} ${GLEW_TARGET} ${WIN_SYS_LIBS})
        set(DEFS _CRT_SECURE_NO_WARNINGS NOMINMAX NDEBUG _CONSOLE UNICODE _UNICODE NANOVG_GLEW)
        if(GLEW_IS_STATIC)
                list(APPEND DEFS GLEW_STATIC)
        endif()
else()
        set(LIBS ${GLFW_TARGET} ${GLEW_TARGET} GLU GL Xext Xi Xrandr X11 Xxf86vm Xinerama Xcursor Xdamage dl z m)
endif()
set(EXAMPLE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/example")
set(EXAMPLE_LEGACY_DIR "${EXAMPLE_DIR}/legacy")
set(COMMON_CXX_FILES "example/demo.cpp" "example/perf.cpp")
set(COMMON_LEGACY_FILES "example/legacy/demo.c" "example/legacy/perf.c")

set(TARGETS ${PROJECT_NAME})
# OpenGL ES examples need GLES headers; typical Windows SDK + GLFW do not provide them.
if(WIN32)
	set(NANOVG_EXAMPLE_PROJECTS gl2 gl3 fbo)
else()
	set(NANOVG_EXAMPLE_PROJECTS gles2 gles3 gl2 gl3 fbo)
endif()

# C++20 examples
foreach(EXAMPLE_PROJ IN ITEMS ${NANOVG_EXAMPLE_PROJECTS})
        add_executable(example_${EXAMPLE_PROJ} "example/example_${EXAMPLE_PROJ}.cpp" ${COMMON_CXX_FILES})
        list(APPEND TARGETS example_${EXAMPLE_PROJ})
        target_compile_definitions(example_${EXAMPLE_PROJ} PUBLIC ${DEFS})
        target_link_libraries(example_${EXAMPLE_PROJ} ${PROJECT_NAME} ${LIBS})
        target_include_directories(example_${EXAMPLE_PROJ} PUBLIC ${EXAMPLE_LEGACY_DIR} ${EXAMPLE_DIR} ${SRC_DIR} ${NVG_SRC_DIR} ${NVG_THIRD_PARTY_DIR})
        target_compile_features(example_${EXAMPLE_PROJ} PRIVATE cxx_std_20)
        if(MSVC)
                target_compile_options(example_${EXAMPLE_PROJ} PRIVATE /W4)
        endif()
endforeach()

# Legacy C examples
foreach(EXAMPLE_PROJ IN ITEMS ${NANOVG_EXAMPLE_PROJECTS})
        add_executable(example_legacy_${EXAMPLE_PROJ} "example/legacy/example_${EXAMPLE_PROJ}.c" ${COMMON_LEGACY_FILES})
        list(APPEND TARGETS example_legacy_${EXAMPLE_PROJ})
        target_compile_definitions(example_legacy_${EXAMPLE_PROJ} PUBLIC ${DEFS})
        target_link_libraries(example_legacy_${EXAMPLE_PROJ} ${PROJECT_NAME} ${LIBS})
        target_include_directories(example_legacy_${EXAMPLE_PROJ} PUBLIC ${EXAMPLE_LEGACY_DIR} ${SRC_DIR} ${NVG_SRC_DIR} ${NVG_THIRD_PARTY_DIR})
        if(MSVC)
                target_compile_options(example_legacy_${EXAMPLE_PROJ} PRIVATE /W4)
        endif()
endforeach()

install(TARGETS ${TARGETS}
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        RUNTIME DESTINATION bin
        INCLUDES DESTINATION include/${PROJECT_NAME}
)

